refactor: 체스 상태 종류 및 내부 메서드 변경
- ChessGameOver 추가
- Command처리를 Controller로 이동
- ChessState.process 메서드를 각 행위별 메서드로 분리